# gst-transcoder

./: .gitignore  configure  meson.build  meson_options.txt
common/meson/: config.h.meson  meson.build
data/targets/online-service/: youtube.gep
data/targets/web/: youtube.gep
doc/transcoder/: hotdoc.json
doc/transcoder/markdown/: gst-transcoder.markdown  index.markdown  transcoder-index.markdown
docs/libs/: gst-transcoder-docs.sgml  gst-transcoder-sections.txt  gst-transcoder.types  meson.build
gst-libs/gst/transcoding/transcoder/: gsttranscoder.c  gsttranscoder.h
gst/transcode/: gst-cpu-throttling-clock.c  gsttranscodebin.c  gsturitranscodebin.c
tools/: gst-transcoder.c  utils.c  utils.h
